[gd_scene load_steps=14 format=3 uid="uid://c0wak65hiot22"]

[ext_resource type="Script" path="res://Scripts/Battle.gd" id="1_31jtf"]
[ext_resource type="PackedScene" uid="uid://bx510d86i5gff" path="res://Components/Knight.tscn" id="2_axumq"]
[ext_resource type="Script" path="res://Scripts/Health_component.gd" id="4_j3o4h"]
[ext_resource type="PackedScene" uid="uid://bb78nnnu4rlyf" path="res://Components/skill_manager.tscn" id="5_l30qy"]
[ext_resource type="Script" path="res://Scripts/Text_Box_Controller.gd" id="5_xmcdw"]
[ext_resource type="PackedScene" uid="uid://dvd5re2kuajj4" path="res://Components/mana_component.tscn" id="8_go8t4"]
[ext_resource type="Script" path="res://Scripts/Save_System/Saver_loader_battle.gd" id="9_f30rq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vqivn"]
bg_color = Color(0.0605303, 0.0605304, 0.0605303, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ws80l"]
bg_color = Color(0.988235, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1f7ki"]
bg_color = Color(2.16588e-07, 0.64134, 0.11044, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3obm3"]
bg_color = Color(0.513726, 0.0196078, 0.027451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eflyk"]
bg_color = Color(0, 0.643137, 0.956863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w2cla"]
bg_color = Color(1, 1, 1, 1)

[node name="Battle_scene" type="Node2D" node_paths=PackedStringArray("text_box_controller", "health_controller", "mana_controller")]
script = ExtResource("1_31jtf")
text_box_controller = NodePath("Text_Box_Controller")
health_controller = NodePath("Health_component")
mana_controller = NodePath("Mana_component")
Enemy_scene = ExtResource("2_axumq")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextBox" type="Panel" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 238.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vqivn")

[node name="Label" type="Label" parent="CanvasLayer/TextBox"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = -5.0
offset_bottom = 217.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "A Monster appears "
autowrap_mode = 3

[node name="Label2" type="Label" parent="CanvasLayer/TextBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -55.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = ">"

[node name="PlayerContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -289.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PlayerContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/PlayerContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme_override_font_sizes/font_size = 32
theme_override_styles/background = SubResource("StyleBoxFlat_ws80l")
theme_override_styles/fill = SubResource("StyleBoxFlat_1f7ki")
max_value = 110.0
value = 110.0
show_percentage = false

[node name="Label" type="Label" parent="CanvasLayer/PlayerContainer/VBoxContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "HP: 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control3" type="Control" parent="CanvasLayer/PlayerContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="ManaBar" type="ProgressBar" parent="CanvasLayer/PlayerContainer/VBoxContainer"]
custom_minimum_size = Vector2(700, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
theme_override_font_sizes/font_size = 32
theme_override_styles/background = SubResource("StyleBoxFlat_3obm3")
theme_override_styles/fill = SubResource("StyleBoxFlat_eflyk")
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="CanvasLayer/PlayerContainer/VBoxContainer/ManaBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "MP: 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/PlayerContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PlayerContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Attack" type="Button" parent="CanvasLayer/PlayerContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_w2cla")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w2cla")
text = "Attack"

[node name="Defende" type="Button" parent="CanvasLayer/PlayerContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_w2cla")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w2cla")
text = "Defend
"

[node name="Skills" type="Button" parent="CanvasLayer/PlayerContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxFlat_w2cla")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w2cla")
text = "Skills
"

[node name="Control2" type="Control" parent="CanvasLayer/PlayerContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="SkillPanel" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 78.0
offset_top = -348.0
offset_right = -48.0
offset_bottom = 307.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/SkillPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SkillPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 60

[node name="Health_component" type="Node" parent="."]
script = ExtResource("4_j3o4h")

[node name="Text_Box_Controller" type="Node" parent="." node_paths=PackedStringArray("text_box", "text_box_label")]
script = ExtResource("5_xmcdw")
text_box = NodePath("../CanvasLayer/TextBox")
text_box_label = NodePath("../CanvasLayer/TextBox/Label")

[node name="Skill_manager" parent="." instance=ExtResource("5_l30qy")]

[node name="Mana_component" parent="." instance=ExtResource("8_go8t4")]

[node name="SaverLoader" type="Node" parent="."]
script = ExtResource("9_f30rq")

[connection signal="gui_input" from="CanvasLayer/PlayerContainer" to="Text_Box_Controller" method="_on_player_container_gui_input"]
[connection signal="pressed" from="CanvasLayer/PlayerContainer/VBoxContainer/HBoxContainer/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="CanvasLayer/PlayerContainer/VBoxContainer/HBoxContainer/Defende" to="." method="_on_defende_pressed"]
[connection signal="pressed" from="CanvasLayer/PlayerContainer/VBoxContainer/HBoxContainer/Skills" to="." method="_on_skills_pressed"]
